# ClimSim

./: .gitignore  README.md  pyproject.toml
climsim_utils/: data_utils.py
config/: evaluate_general.yaml  train_general.yaml  train_general_test.yaml
config/dataset/: sub_sampled_low_res.yaml
config/datasets/: sub_sampled_low_res.yaml
config/hydra/: default.yaml  test.yaml
config/hydra/launcher/: slurm.yaml
config/model/: mlp.yaml
config/models/: models.yaml
config/project/: config.yaml
config/testing/: dr.yaml  ft.yaml  none.yaml  qt.yaml
config/wandb/wkey/: wkey.yaml
data_preparation/: README.md  __init__.py  select_data.py  sub_sampled_low_res.py
demo_notebooks/: quickstart_example.ipynb
models/: __init__.py  lightning_wrapper.py  mlp.py
models/model_utils/: model_selection.py
notebooks/demo_notebooks/: quickstart_example.ipynb
outputs/2025-10-16/09-28-36/.hydra/: config.yaml  hydra.yaml
test/test_data_preparation/: generate_test_data.py  test_select_data.py
test/test_datasets/: test_sub_sampled_low_res.py
test/test_training/: test_standard_training_from_cfg.py
test/unit_test_sets/: README.md
test/unit_test_sets/sub_sampled_low_res/: scoring_input.npy  scoring_target.npy  train_input.npy  train_target.npy  val_input.npy  val_target.npy
tests/old_tests/: README.md
train/: train_general.py
train/train_utils/: __init__.py  general_utils.py  standard_training_from_cfg.py
