[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climsim"
version = "0.0.1"
description = "Adapted"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Jerry Lin", email = "jerryl9@uci.edu"}]
license = "Apache-2.0"

dependencies = [
  "hydra-core>=1.1.0",
  "hydra-submitit-launcher>=1.2.0",
  "xarray>=2023.11",
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "netCDF4>=1.6",
  "h5py>=3.8",
  "tqdm>=4.65"
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.12"]
pytorch = ["torch>=2.1"]

[tool.setuptools.packages.find]
where = ["climsim_utils"]
